2009-01-15  Michael Smith <msmith@songbirdnest.com>

	* sys/osxaudio/Makefile.am:
	  Link against CoreServices (needed for osx 10.4) and fix up the linker
	  flags. Fixes #567853.

2009-01-15  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_segments):
	Catch invalid and commonly wrong playback rates in the elst atoms.
	Fixes #567800.

2009-01-15  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/spectrum/gstspectrum.c: (gst_spectrum_reset_state):
	Don't call gst_fft_f32_free() with NULL to prevent a
	crash. Fixes bug #567642.

2009-01-14  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/spectrum/gstspectrum.c: (gst_spectrum_transform_ip):
	* gst/spectrum/gstspectrum.h:
	Use correct types for frame/fft counters and some minor
	cleanup.

2009-01-14  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Lennart Poettering <lennart at poettering dot net>

	* ext/pulse/pulseprobe.c: (gst_pulseprobe_new),
	(gst_pulseprobe_free):
	Fix refcount loop, resulting in a thread leak. Fixes bug #567746.

2009-01-14  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/spectrum/Makefile.am:
	* gst/spectrum/README:
	* gst/spectrum/gstspectrum.c: (gst_spectrum_base_init),
	(gst_spectrum_class_init), (gst_spectrum_init),
	(gst_spectrum_reset_state), (gst_spectrum_finalize),
	(gst_spectrum_set_property), (gst_spectrum_start),
	(gst_spectrum_stop), (gst_spectrum_setup),
	(gst_spectrum_transform_ip):
	* gst/spectrum/gstspectrum.h:
	Post a spectrum message on the bus for every interval, even
	if the interval is small than the length of the FFT.
	Fixes bug #567642.

	Major cleanup of the spectrum element.

2009-01-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* gst/audiofx/Makefile.am:
	* gst/audiofx/audiofirfilter.c: (gst_audio_fir_filter_base_init),
	(gst_audio_fir_filter_class_init),
	(gst_audio_fir_filter_update_kernel), (gst_audio_fir_filter_init),